--- a/src/assets/css/blast.css
+++ b/src/assets/css/blast.css
@@ -10,8 +10,6 @@
   font-size: 4rem;
   z-index: 999;
   position: absolute;
-  left: -0.5rem;
-  top: -4rem;
 }
 .ignition {
   font-size: 2rem;
@@ -33,12 +31,16 @@
   height: 1.75rem !important;
   padding: 0px;
 }
+.stock-bomb {
+  background-image: url("/static/bomb/red-bomb.svg");
+  background-size: cover;
+}
 .box-base {
   cursor: pointer;
-  min-width: 1.75rem !important;
-  min-height: 1.75rem !important;
-  width: 1.75rem !important;
-  height: 1.75rem !important;
+  min-width: var(--box-width) !important;
+  min-height: var(--box-height) !important;
+  width: var(--box-width) !important;
+  height: var(--box-width) !important;
   text-align: left !important;
   vertical-align: top !important;
   border-top: 1px solid #000000;
@@ -48,13 +50,6 @@
   color: #000000;
   padding: 0px;
 }
-.box-large2 {
-  font-size: x-large;
-  min-width: 2.25rem !important;
-  min-height: 2.25rem !important;
-  max-width: 2.25rem !important;
-  max-height: 2.25rem !important;
-}
 .box-row-last {
   border-bottom: 1px solid #000000;
 }
@@ -63,6 +58,14 @@
 }
 .box-pattern2 {
   background-color: #f5f5f5;
+}
+.box-base p.dummy {
+  margin: 0;
+  padding: 0;
+}
+.box-base img {
+  position: absolute;
+  z-index: 100;
 }
 .up {
   animation: up-animation 0.5s forwards;
@@ -77,12 +80,10 @@
     -webkit-transform: translateY(-100px);
   }
 }
-.red-bomb-down {
-  background-image: url("/static/bomb/red-bomb.svg");
-  background-size: cover;
-  animation: down-animation 0.5s forwards;
+.drop-down {
+  animation: drop-down-animation 0.5s forwards;
 }
-@keyframes down-animation {
+@keyframes drop-down-animation {
   0% {
     transform: translateY(-1000px);
     -webkit-transform: translateY(-500px);
@@ -92,59 +93,6 @@
     -webkit-transform: translateY(0px);
   }
 }
-.red-bomb-scale {
-  background-image: url("/static/bomb/red-bomb.svg");
-  background-size: cover;
-  animation: scale-animation 1.0s infinite;
-}
-.stock-bomb {
-  background-image: url("/static/bomb/red-bomb.svg");
-  background-size: cover;
-}
-.black-bomb {
-  background-image: url("/static/bomb/black-bomb.svg");
-  background-size: cover;
-  animation: scale-animation 1.0s infinite;
-}
-.move-bomb-n,
-.move-bomb-s,
-.move-bomb-e,
-.move-bomb-w {
-  background-image: url("/static/bomb/blue-bomb.svg");
-  background-size: cover;
-  animation: scale-animation 1.0s infinite;
-}
-.timer-bomb {
-  background-image: url("/static/bomb/timter-bomb.svg");
-  background-size: cover;
-}
-.unbreakable {
-  background-image: url("/static/bomb/unbreakable.svg");
-  background-size: cover;
-}
-.breakable1 {
-  background-image: url("/static/bomb/breakable1.svg");
-  background-size: cover;
-}
-.enemy-stop {
-  background-image: url("/static/bomb/enemy-purple.svg");
-  background-size: cover;
-  animation: scale-animation 1.0s infinite;
-}
-.enemy-vertical,
-.enemy-n,
-.enemy-s {
-  background-image: url("/static/bomb/enemy-blue.svg");
-  background-size: cover;
-  animation: scale-animation 0.9s infinite;
-}
-.enemy-horizontal,
-.enemy-e,
-.enemy-w {
-  background-image: url("/static/bomb/enemy-blue.svg");
-  background-size: cover;
-  animation: scale-animation 1.0s infinite;
-}
 .scale {
   animation: scale-animation 1.0s infinite;
 }
@@ -153,11 +101,18 @@
   50% {transform: scale(0.75, 0.75);}
   100% {transform: scale(1.0, 1.0);}
 }
-.enemy-down {
-  background-image: url("/static/bomb/enemy-down.svg");
-  animation: enemy-down-explosion 1.5s forwards;
+.knockout {
+  animation: knockout-animation 1.0s forwards;
 }
-@keyframes enemy-down-explosion {
+@keyframes knockout-animation {
+  0% {transform: scale(1.0, 1.0);}
+  50% {transform: scale(1.0, 1.0) rotate(360deg);}
+  100% {transform: scale(0, 0) rotate(720deg);}
+}
+.erase {
+  animation: erase-animation 1.0s forwards;
+}
+@keyframes erase-animation {
   0% {transform: scale(1.0, 1.0);}
   50% {transform: scale(1.0, 1.0);}
   100% {transform: scale(0, 0);}
@@ -166,28 +121,15 @@
   width: 1.75rem !important;
   height: 1.75rem !important;
   position: absolute;
-  z-index: 100;
-  animation: explosion-bomb-animation 0.5s forwards;
+  z-index: 101;
+  animation: explosion-animation 0.5s forwards;
 }
-.arrow-w-n {
-  background-image: url("/static/bomb/arrow-w-n.svg");
-  background-size: cover;
-}
-.arrow-w-s {
-  background-image: url("/static/bomb/arrow-w-s.svg");
-  background-size: cover;
-}
-@keyframes explosion-bomb-animation {
+@keyframes explosion-animation {
   0% {transform: scale(0, 0);}
   90% {transform: scale(2.0, 2.0);}
   100% {transform: scale(0, 0);}
 }
 .blast {
-  width: 1.75rem !important;
-  height: 1.75rem !important;
-  position: absolute;
-  z-index: 100;
-  animation-timing-function: linear;
   animation: blast-animation var(--animation-second) forwards;
 }
 @keyframes blast-animation {
@@ -204,11 +146,38 @@
     -webkit-transform: translateX(var(--translate-x)) translateY(var(--translate-y)) rotate(var(--rotate)) scale(0, 0);
   }
 }
-@-webkit-keyframes flash {
+.big-explosion {
+  width: 4rem;
+  height: 4rem;
+  position: absolute;
+  z-index: 101;
+  top: 150px;
+  left: 200px;  
+  animation: big-explosion-animation 1.0s forwards;
+}
+@keyframes big-explosion-animation {
+  0% {transform: scale(0, 0);}
+  12.5% {transform: scale(3.0, 3.0);}
+  25% {transform: scale(0, 0);}
+  37.5% {transform: translate(100%, 0) scale(3.0, 3.0);}
+  50% {transform: scale(0, 0);}
+  62.5% {transform: translate(100%, 100%)scale(3.0, 3.0);}  
+  75% {transform: scale(0, 0);}
+  87.5% {transform: translate(50%, 50%) scale(4.0, 4.0);}
+  100% {transform: scale(0, 0);}  
+}
+.flash {
+  animation: flash-animation 1s infinite;
+}
+.flash-quick {
+  animation: flash-animation 0.25s infinite;
+}
+
+@-webkit-keyframes flash-animation {
   0% {opacity: 0;}
   100% {opacity: 1;}
 }
-@keyframes flash {
+@keyframes flash-animation {
   0% {opacity: 0;}
   100% {opacity: 1;}
 }
