--- a/src/assets/css/blast.css
+++ b/src/assets/css/blast.css
@@ -155,6 +155,13 @@
   left: 200px;  
   animation: big-explosion-animation 1.0s forwards;
 }
+@media screen and (max-width: 768px) {
+  .big-explosion {
+   left: 50%;
+   -webkit-transform: translate(-50%, 100px);
+   transform: translate(-50%, 100px);
+  }
+}
 @keyframes big-explosion-animation {
   0% {transform: scale(0, 0);}
   12.5% {transform: scale(3.0, 3.0);}
